# unimail-cpp-sdk

./: .gitignore  CMakeLists.txt  Makefile  README.md  README_zh.md
cmake/: unimail-cpp-sdkConfig.cmake  unimailCppSdkConfig.cmake
include/allcloud/: unimail-cpp-sdk.h  unimail-version.h.in
include/icurve/: unimail-cpp-sdk.h
src/: unimail-cpp-sdk.cpp
test/: CMakeLists.txt  unimail_test.cpp
